--- a/Projects/countdown timer/index.html
+++ b/Projects/countdown timer/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>New Year Eve</h1>
+    <h1>New Year 2023 Count down</h1>
 
     <div class="countdown-container">
       <div class="countdown-el days-c">
