--- a/Projects/Gaurav Marriage countdown/index.html
+++ b/Projects/Gaurav Marriage countdown/index.html
@@ -9,8 +9,8 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Gaurav Weds Mrunali Countdown</h1>
-
+    <h1>Gaurav <span>Weds</span> Mrunali Countdown</h1>
+    <h2>Save the Date <span>26 Nov 2022</span></h2>
     <div class="countdown-container">
       <div class="countdown-el days-c">
         <p class="big-text" id="days">0</p>
