--- a/Projects/recipe-app/index.html
+++ b/Projects/recipe-app/index.html
@@ -19,11 +19,11 @@
     <div class="mobile-container">
       <header>
         <input type="text" />
-        <button id="search">Search</button>
+        <button id="search"><i class="fas fa-search"></i></button>
       </header>
       <div class="fav-container">
         <h3>Favourite Meals</h3>
-        <ul>
+        <ul class="fav-meals">
           <li>
             <img
               src="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg"
