--- a/Projects/recipe-app/index.html
+++ b/Projects/recipe-app/index.html
@@ -26,9 +26,27 @@
         <ul class="fav-meals">
           <li>
             <img
-              src="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg"
+              src="https://www.themealdb.com/images/media/meals/ysxwuq1487323065.jpg"
               alt=""
-            /><span>Burek</span>
+            /><span>FishPie</span>
+          </li>
+          <li>
+            <img
+              src="https://www.themealdb.com/images/ingredients/Chicken.png"
+              alt=""
+            /><span>chicken</span>
+          </li>
+          <li>
+            <img
+              src="https://www.themealdb.com/images/ingredients/Salmon.png"
+              alt=""
+            /><span>Salmon</span>
+          </li>
+          <li>
+            <img
+              src="https://www.themealdb.com/images/media/meals/ysxwuq1487323065.jpg"
+              alt=""
+            /><span>FishPie</span>
           </li>
           <li>
             <img
